--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,7 +5,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1.34.1
+    - uses: actions/checkout@v4
+      with:
+        ref: '1.34.1'
     - name: set up JDK 11
       uses: actions/setup-java@v4
       with:
