--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,14 +2,14 @@ name: Android CI
 on: workflow_dispatch
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
 
     steps:
     - uses: actions/checkout@v4
       with:
         ref: '1.34.1'
     - name: set up JDK 11
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@v5
       with:
         java-version: '11'
         distribution: 'temurin'
@@ -18,3 +18,9 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew assembleRelease
+
+    - name: generate apk
+      uses: actions/upload-artifact@v5
+      with:
+        name: busybox-Android
+        path: app
