--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,6 +2,7 @@ name: Android CI
 on: workflow_dispatch
 jobs:
   build:
+    name: Generate APK
     runs-on: ubuntu-latest
 
     steps:
@@ -22,5 +23,5 @@ jobs:
     - name: generate apk
       uses: actions/upload-artifact@v5
       with:
-        name: busybox-Android
-        path: app
+        name: busybox_1.34.1.apk
+        path: app/build/outputs/apk/release/*.apk
