--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,23 +20,20 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew assembleRelease
 
-    - uses: r0adkll/sign-android-release@v1
+    - uses: ilharp/sign-android-release@v2 # Or use @nightly
       name: Sign app APK
-      # ID used to access action output
       id: sign_app
       with:
-        releaseDirectory: app/build/outputs/apk/release
-        signingKeyBase64: ${{ secrets.SIGNING_KEY }}
-        alias: ${{ secrets.ALIAS }}
-        keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
-        keyPassword: ${{ secrets.KEY_PASSWORD }}
-      env:
-        # override default build-tools version (33.0.0) -- optional
-        BUILD_TOOLS_VERSION: "34.0.0"
+        releaseDir: app/build/outputs/apk/release
+        signingKey: ${{ secrets.ANDROID_SIGNING_KEY }}
+        keyAlias: ${{ secrets.ANDROID_KEY_ALIAS }}
+        keyStorePassword: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
+        keyPassword: ${{ secrets.ANDROID_KEY_PASSWORD }}
+        buildToolsVersion: 36.0.0
 
     - name: generate apk
       uses: actions/upload-artifact@v5
       with:
         name: busybox_release
         # path: app/build/outputs/apk/release/*.apk
-        path: ${{steps.sign_app.outputs.signedReleaseFile}}
+        path: ${{steps.sign_app.outputs.signedFile}}
