--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,10 +25,10 @@ jobs:
       id: sign_app
       with:
         releaseDir: app/build/outputs/apk/release
-        signingKey: ${{ secrets.ANDROID_SIGNING_KEY }}
-        keyAlias: ${{ secrets.ANDROID_KEY_ALIAS }}
-        keyStorePassword: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
-        keyPassword: ${{ secrets.ANDROID_KEY_PASSWORD }}
+        signingKey: ${{ secrets.SIGNING_KEY }}
+        keyAlias: ${{ secrets.ALIAS }}
+        keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+        keyPassword: ${{ secrets.KEY_PASSWORD }}
         buildToolsVersion: 36.0.0
 
     - name: generate apk
