--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,10 +7,11 @@ jobs:
 
     steps:
     - name: checkout tag
+      id: CT
       uses: actions/checkout@v4
       with:
         ref: '1.34.1'
-    - id: get_tag
-      run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+    # - id: get_tag
+    #   run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
     - name: echo tag
-      run: echo ${{ steps.get_tag.outputs.VERSION }}
+      run: echo ${{ steps.CT.ref }}
