--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
       id: CT
       uses: actions/checkout@v4
       with:
-        ref: 'v1.34.1'
+        ref: '1.34.1'
     # - id: get_tag
     #   run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
     - name: echo tag
