--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,11 +7,12 @@ jobs:
 
     steps:
     - name: checkout tag
-      id: CT
       uses: actions/checkout@v4
       with:
         ref: '1.34.1'
-    # - id: get_tag
-    #   run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
-    - name: echo tag
-      run: echo ${{ steps.CT.with.ref }}
+    - name: Set env
+      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+    - name: Test
+      run: |
+        echo $RELEASE_VERSION
+        echo ${{ env.RELEASE_VERSION }}
