--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
       with:
         ref: '1.34.1'
     - name: Set env
-      run: echo "RELEASE_VERSION=${github.ref#refs/tags/}" >> $GITHUB_ENV
+      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
     - name: Test
       run: |
         echo $RELEASE_VERSION
