--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,8 @@ jobs:
         ref: '1.34.1'
     - name: Test
       run: |
-        echo $INPU_REF
-        echo ${{ env.INPU_REF }}
+        echo $INPUT_REF
+        echo ${{ env.INPUT_REF }}
         echo ${{ steps.CT }}
-        echo ${{ steps.CT.INPU_REF }}
-        echo ${{ steps.CT.with.INPU_REF }}
+        echo ${{ steps.CT.INPUT_REF }}
+        echo ${{ steps.CT.with.INPUT_REF }}
