--- a/.github/workflows/Android APP CI.yml
+++ b/.github/workflows/Android APP CI.yml
@@ -9,10 +9,10 @@ jobs:
     steps:
     - name: set ENV
       id: SE
-      run: echo 'Tag=1.34.1' >> $GITHUB_ENV
+      run: echo "Tag=1.34.1" >> "$GITHUB_ENV"
     - uses: actions/checkout@v4
       with:
-        ref: $Tag
+        ref: "$Tag"
     # - name: set up JDK 11
     #   uses: actions/setup-java@v5
     #   with:
@@ -48,5 +48,5 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: $Tag
-        release_name: Release $Tag
+        tag_name: "$Tag"
+        release_name: Release "$Tag"
