--- a/.github/workflows/Android APP CI.yml
+++ b/.github/workflows/Android APP CI.yml
@@ -1,18 +1,17 @@
 name: Android APP CI
 run-name: Build_Sign_Artifact_createRelease
 on: workflow_dispatch
+env:
+  Tag: 1.34.1
 jobs:
   build:
     name: Generate APK
     runs-on: ubuntu-latest
 
     steps:
-    - name: set ENV
-      id: SE
-      run: echo "Tag=1.34.1" >> "$GITHUB_ENV"
     - uses: actions/checkout@v4
       with:
-        ref: "$Tag"
+        ref: ${{ env.Tag }}
     # - name: set up JDK 11
     #   uses: actions/setup-java@v5
     #   with:
@@ -48,5 +47,5 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: "$Tag"
-        release_name: Release "$Tag"
+        tag_name: ${{ env.Tag }}
+        release_name: Release ${{ env.Tag }}
