--- a/.github/workflows/Android APP CI.yml
+++ b/.github/workflows/Android APP CI.yml
@@ -1,5 +1,5 @@
 name: Android APP CI
-run-name: Build_Sign_Artifact_createRelease
+run-name: Build_Sign_Artifact_createRelease_uploadArtifactRelease
 on: workflow_dispatch
 env:
   Tag: 1.34.1
@@ -12,34 +12,34 @@ jobs:
     - uses: actions/checkout@v4
       with:
         ref: ${{ env.Tag }}
-    # - name: set up JDK 11
-    #   uses: actions/setup-java@v5
-    #   with:
-    #     java-version: '11'
-    #     distribution: 'temurin'
-    #     cache: gradle
-    # - name: Grant execute permission for gradlew
-    #   run: chmod +x gradlew
-    # - name: Build with Gradle
-    #   run: ./gradlew assembleRelease
+    - name: set up JDK 11
+      uses: actions/setup-java@v5
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        cache: gradle
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Build with Gradle
+      run: ./gradlew assembleRelease
 
-    # - uses: ilharp/sign-android-release@v2
-    #   name: Sign app APK
-    #   id: sign_app
-    #   with:
-    #     releaseDir: app/build/outputs/apk/release
-    #     signingKey: ${{ secrets.SIGNING_KEY }}
-    #     keyAlias: ${{ secrets.ALIAS }}
-    #     keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
-    #     keyPassword: ${{ secrets.KEY_PASSWORD }}
-    #     buildToolsVersion: 36.0.0
+    - uses: ilharp/sign-android-release@v2
+      name: Sign app APK
+      id: sign_app
+      with:
+        releaseDir: app/build/outputs/apk/release
+        signingKey: ${{ secrets.SIGNING_KEY }}
+        keyAlias: ${{ secrets.ALIAS }}
+        keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+        keyPassword: ${{ secrets.KEY_PASSWORD }}
+        buildToolsVersion: 36.0.0
 
-    # - name: generate apk
-    #   uses: actions/upload-artifact@v5
-    #   with:
-    #     name: busybox_release
-    #     # path: app/build/outputs/apk/release/*.apk
-    #     path: ${{steps.sign_app.outputs.signedFile}}
+    - name: generate apk
+      uses: actions/upload-artifact@v5
+      with:
+        name: busybox_release
+        # path: app/build/outputs/apk/release/*.apk
+        path: ${{ steps.sign_app.outputs.signedFile }}
 
     - name: create release
       id: create_release
@@ -49,3 +49,13 @@ jobs:
       with:
         tag_name: ${{ env.Tag }}
         release_name: Release ${{ env.Tag }}
+    - name: Upload Release Asset
+      id: upload_release_asset 
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ${{ steps.sign_app.outputs.signedFile }}
+        asset_name: App.apk
+        asset_content_type: application/vnd.android.package-archiv
