Update release action name in CI workflow

--- a/.github/workflows/Android APP CI.yml
+++ b/.github/workflows/Android APP CI.yml
@@ -65,5 +65,6 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         tag: ${{ env.Tag }}
+        name: BusyBox ${{ env.Tag }}
         artifacts: "*.apk"
         generateReleaseNotes: yes
