Update Android APP CI.yml

--- a/.github/workflows/Android APP CI.yml
+++ b/.github/workflows/Android APP CI.yml
@@ -67,4 +67,5 @@ jobs:
         tag: ${{ env.Tag }}
         name: BusyBox ${{ env.Tag }}
         artifacts: "*.apk"
+        makeLatest: yes
         generateReleaseNotes: yes
